@@ -1,9 +1,0 @@
-package it.uniroma2.art.semanticturkey.plugin.extpts;
-
-import it.uniroma2.art.semanticturkey.services.support.QueryBuilderProcessor;
-
-/**
- * A component able to compute the rendering of a collection of resources.
- */
-public interface RenderingEngine extends QueryBuilderProcessor {
-}
