@@ -1,74 +1,0 @@
-/*
- * The contents of this file are subject to the Mozilla Public License
- * Version 1.1 (the "License");  you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- * http//www.mozilla.org/MPL/
- *
- * Software distributed under the License is distributed on an "AS IS" basis,
- * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License for
- * the specific language governing rights and limitations under the License.
- *
- * The Original Code is Semantic Turkey.
- *
- * The Initial Developer of the Original Code is University of Roma Tor Vergata.
- * Portions created by University of Roma Tor Vergata are Copyright (C) 2009.
- * All Rights Reserved.
- *
- * Semantic Turkey was developed by the Artificial Intelligence Research Group
- * (art.uniroma2.it) at the University of Roma Tor Vergata
- * Current information about Semantic Turkey can be obtained at 
- * http//ai-nlp.info.uniroma2.it/software/...
- *
- */
-
-/*
- * Contributor(s): Armando Stellato stellato@info.uniroma2.it
- */
-package it.uniroma2.art.semanticturkey.plugin.extpts;
-
-import it.uniroma2.art.semanticturkey.servlet.Response;
-import it.uniroma2.art.semanticturkey.servlet.ServiceRequest;
-
-public interface ServiceInterface extends STOSGIExtension {
-
-	/**
-	 * @param oReq
-	 *            HttpServletRequest
-	 * @deprecated See {@link ServiceInterface#handleRequest(ServiceRequest)}
-	 */
-	@Deprecated
-	public void setServiceRequest(ServiceRequest oReq);
-
-	/**
-	 * @param the
-	 *            listener to be added to this service
-	 */
-	public void addListener(ServletListener l);
-
-	/**
-	 * remove the listener associated to this server
-	 * 
-	 * @param l
-	 *            listener da rimuovere
-	 */
-	public void removeListener(ServletListener l);
-
-	/**
-	 * @return
-	 * @deprecated See {@link ServiceInterface#handleRequest(ServiceRequest)}
-	 */
-	@Deprecated
-	public Response getResponse();
-
-	/**
-	 * Processes a {@link ServiceRequest} and produces a {@link Response}. This operation is intended to
-	 * replace the combined use of {@link #setServiceRequest(ServiceRequest)} and {@link #getResponse()}. The
-	 * use of a single method simplifies the management of the thread-bound resources used to handle a
-	 * request.
-	 * 
-	 * @param oReq
-	 * @return
-	 */
-	public Response handleRequest(ServiceRequest oReq);
-
-}
