@@ -1,6 +1,7 @@
 version 10.0
 date: dd/mm/yyyy
   * update core settings to the new settings management framework (including the use of YAML to persist them)
+  * upgrade the PUSettings of the RenderingEngine extension point to the new framework (including the use of YAML to persist them)
   * implemented support for email verification during the user registration procedure
   * allowed administrator to activate a new registered user through a link sent via email
   * added Scottish Gaelic and Welsh to the system languages
